# paidy-test

./: Cargo.toml  README.md
src/: client.rs  database.rs  item.rs  main.rs  server.rs
