[package]
name = "paidy-test"
version = "0.1.0"
authors = ["Pablo Peraza <piousp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
actix-web = "1.0.8"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
